Add support for TF2.1

--- a/examples/activation_maximization.ipynb
+++ b/examples/activation_maximization.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num GPUs Available:  0\n"
+      "Num GPUs Available:  1\n"
      ]
     }
    ],
@@ -25,7 +25,7 @@
     "%autoreload 2\n",
     "\n",
     "import tensorflow as tf\n",
-    "print(\"Num GPUs Available: \", len(tf.config.experimental.list_physical_devices('GPU')))"
+    "print(\"Num GPUs Available: \", len(tf.config.list_physical_devices('GPU')))"
    ]
   },
   {
@@ -339,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
