--- a/examples/activation_maximization.ipynb
+++ b/examples/activation_maximization.ipynb
@@ -25,7 +25,10 @@
     "%autoreload 2\n",
     "\n",
     "import tensorflow as tf\n",
-    "print(\"Num GPUs Available: \", len(tf.config.list_physical_devices('GPU')))"
+    "if tf.__version__ == '2.0.0':\n",
+    "    print(\"Num GPUs Available: \", len(tf.experimental.config.list_physical_devices('GPU')))\n",
+    "else:\n",
+    "    print(\"Num GPUs Available: \", len(tf.config.list_physical_devices('GPU')))"
    ]
   },
   {
