--- a/examples/activation_maximization.ipynb
+++ b/examples/activation_maximization.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "import tensorflow as tf\n",
     "if tf.__version__ == '2.0.0':\n",
-    "    print(\"Num GPUs Available: \", len(tf.experimental.config.list_physical_devices('GPU')))\n",
+    "    print(\"Num GPUs Available: \", len(tf.config.experimental.list_physical_devices('GPU')))\n",
     "else:\n",
     "    print(\"Num GPUs Available: \", len(tf.config.list_physical_devices('GPU')))"
    ]
