--- a/examples/attention.ipynb
+++ b/examples/attention.ipynb
@@ -9,13 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "Num GPUs Available:  1\n"
      ]
     }
@@ -26,7 +28,7 @@
     "\n",
     "import tensorflow as tf\n",
     "if tf.__version__ == '2.0.0':\n",
-    "    print(\"Num GPUs Available: \", len(tf.experimental.config.list_physical_devices('GPU')))\n",
+    "    print(\"Num GPUs Available: \", len(tf.config.experimental.list_physical_devices('GPU')))\n",
     "else:\n",
     "    print(\"Num GPUs Available: \", len(tf.config.list_physical_devices('GPU')))"
    ]
