--- a/examples/visualize_conv_filters.ipynb
+++ b/examples/visualize_conv_filters.ipynb
@@ -121,7 +121,7 @@
    "source": [
     "### Visualizing Conv filters\n",
     "\n",
-    "ActivationMaximization will maximize the value that is computed by the loss function that is passed as argument. Here, we try to visualize conv filters. To do so, you need to replace the model output to arbitrary layer's output that contains target conv filters.\n",
+    "ActivationMaximization will maximize the value that is computed by the loss function passed as argument. Here, we try to visualize conv filters. To do so, you need to replace the model output to arbitrary layer's output that contains target conv filters.\n",
     "\n",
     "> [!NOTE]\n",
     "> For visualizing these filters clearly and sharply, we recommend you using `SmoothedLoss`. Most of conv filters will be visualized well."
