--- a/examples/visualize_dense_layer.ipynb
+++ b/examples/visualize_dense_layer.ipynb
@@ -121,7 +121,7 @@
    "source": [
     "### Visualizing a specific output category\n",
     "\n",
-    "ActivationMaximization will maximize the value that is computed by the loss function that is passed as argument. Here, we try to visualize a category as defined No.20 (ouzel) of imagenet.\n",
+    "ActivationMaximization will maximize the value that is computed by the loss function passed as argument. Here, we try to visualize a category as defined No.20 (ouzel) of imagenet.\n",
     "\n",
     "> [!NOTE]\n",
     "> The softmax activation function which is applied to model's last layer may obstruct generating shape images, so that you need to replace the function to a linear function using `model_modifier`."
