--- a/examples/visualize_dense_layer.ipynb
+++ b/examples/visualize_dense_layer.ipynb
@@ -20,8 +20,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --upgrade pip\n",
-    "!pip install --upgrade tf-keras-vis tensorflow matplotlib"
+    "# !pip install --upgrade pip\n",
+    "# !pip install --upgrade tf-keras-vis tensorflow matplotlib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(Please remove comment-out in the cell above when you want to install essential libraries to run tf-keras-vis.)"
    ]
   },
   {
