--- a/examples/attentions.ipynb
+++ b/examples/attentions.ipynb
@@ -554,14 +554,18 @@
    "source": [
     "%%time\n",
     "\n",
-    "from tf_keras_vis.scorecam import ScoreCAM\n",
+    "from tf_keras_vis.scorecam import Scorecam\n",
     "from tf_keras_vis.utils import num_of_gpus\n",
     "\n",
     "# This cell takes toooooooo much time, so only doing with GPU.\n",
     "_, gpus = num_of_gpus()\n",
     "if gpus > 0:\n",
     "    # Create ScoreCAM object\n",
-    "    scorecam = ScoreCAM(model, model_modifier, clone=False)\n",
+    "    scorecam = Scorecam(model,\n",
+    "                        # As pointed out in https://github.com/keisen/tf-keras-vis/issues/47,\n",
+    "                        # ModelModier should be NOT applied with ScoreCAM.\n",
+    "                        model_modifier=None,\n",
+    "                        clone=False)\n",
     "\n",
     "    # Generate heatmap with ScoreCAM\n",
     "    cam = scorecam(score,\n",
@@ -619,10 +623,14 @@
    "source": [
     "%%time\n",
     "\n",
-    "from tf_keras_vis.scorecam import ScoreCAM\n",
+    "from tf_keras_vis.scorecam import Scorecam\n",
     "\n",
     "# Create ScoreCAM object\n",
-    "scorecam = ScoreCAM(model, model_modifier, clone=False)\n",
+    "scorecam = Scorecam(model,\n",
+    "                    # As pointed out in https://github.com/keisen/tf-keras-vis/issues/47,\n",
+    "                    # ModelModier should be NOT applied with ScoreCAM.\n",
+    "                    model_modifier=None,\n",
+    "                    clone=False)\n",
     "\n",
     "# Generate heatmap with Faster-ScoreCAM\n",
     "cam = scorecam(score,\n",
@@ -664,7 +672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
